align-items: center to fix dropdown

--- a/src/global.css
+++ b/src/global.css
@@ -1863,6 +1863,7 @@ input[type="range"] {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   padding: 16px 24px;
   background: transparent;
   border: 3px solid #000000;
